# hot-nerds-server

./: .env.example  .gitignore  README.md  db.db  pyproject.toml
src/: api.py  models.py  settings.py  storage.py
tools/: init_db.py
